kubernetes/apps/observability/scrutiny/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-scrutiny-influxdb-ingress"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: scrutiny
      app.kubernetes.io/instance: scrutiny
  ingressDeny:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "8086"
              protocol: TCP
